--- a/src/MH/NewsletterBundle/Resources/config/services.yml
+++ b/src/MH/NewsletterBundle/Resources/config/services.yml
@@ -2,3 +2,7 @@ services:
 #    mh_newsletter.example:
 #        class: MH\NewsletterBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
+    twig.extension.sortbyfield:
+        class: Snilius\Twig\SortByFieldExtension
+        tags:
+            - { name: twig.extension }
