--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "snilius/twig-sort-by-field": "^0.1.5"
+        "snilius/twig-sort-by-field": "^0.1.5",
+        "knplabs/knp-markdown-bundle": "~1.3"
+
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
