--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "snilius/twig-sort-by-field": "^0.1.5",
-        "knplabs/knp-markdown-bundle": "~1.3"
+        "knplabs/knp-markdown-bundle": "~1.3",
+        "coresphere/console-bundle": "~0.4"
 
     },
     "require-dev": {
