--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+mh_mail:
+    resource: "@MHMailBundle/Resources/config/routing.yml"
+    prefix:   /mail
+
 mh_newsletter:
     resource: "@MHNewsletterBundle/Resources/config/routing.yml"
     prefix:   /newsletter
