4 Bloc Now working : Agenda Texte Separation Header Footer admission
Sorting OK
Delete OK
Change OK

Clone KO
Mail KO

--- a/src/MH/MailBundle/Resources/config/routing.yml
+++ b/src/MH/MailBundle/Resources/config/routing.yml
@@ -52,6 +52,8 @@ mh_mail_order:
     defaults:
         _controller: MHMailBundle:Mail:order
 
+
+
 mh_mail_post_add:
     path:     /post/add/{id}
     defaults:
@@ -78,3 +80,66 @@ mh_mail_post_order:
     path:     /post/order
     defaults:
         _controller: MHMailBundle:Post:order
+
+mh_mail_post_select:
+    path:     /post/select/{id}
+    defaults:
+        _controller: MHMailBundle:PostType:select
+    requirements:
+            id:   \d+
+
+mh_mail_agenda_add:
+    path:     /post/add/{id}/agenda
+    defaults:
+        _controller: MHMailBundle:Agenda:addAgenda
+    requirements:
+            id:   \d+
+
+mh_mail_agenda_edit:
+    path:     /post/edit/{id}/agenda
+    defaults:
+        _controller: MHMailBundle:Agenda:editAgenda
+    requirements:
+            id:   \d+
+
+mh_mail_header_add:
+    path:     /post/add/{id}/header
+    defaults:
+        _controller: MHMailBundle:Header/Header:addHeader
+    requirements:
+            id:   \d+
+
+mh_mail_header_edit:
+    path:     /post/edit/{id}/header
+    defaults:
+        _controller: MHMailBundle:Header/Header:editHeader
+    requirements:
+            id:   \d+
+
+mh_mail_footer_admission_add:
+    path:     /post/add/{id}/footer_admission
+    defaults:
+        _controller: MHMailBundle:Footer/Footer:addFooterAdmission
+    requirements:
+            id:   \d+
+
+mh_mail_footer_admission_edit:
+    path:     /post/edit/{id}/footer_admission
+    defaults:
+        _controller: MHMailBundle:Footer/Footer:editFooterAdmission
+    requirements:
+            id:   \d+
+
+mh_mail_texte_separation_add:
+    path:     /post/add/{id}/texte_separation
+    defaults:
+        _controller: MHMailBundle:Texte/Texte:addTexte
+    requirements:
+            id:   \d+
+
+mh_mail_texte_separation_edit:
+    path:     /post/edit/{id}/texte_separation
+    defaults:
+        _controller: MHMailBundle:Texte/Texte:editTexte
+    requirements:
+            id:   \d+
