Outil Couleur working
Need to pass couleur object and not a couleur string in order to retrieve it on next change

--- a/src/MH/MailBundle/Resources/config/routing_agenda.yml
+++ b/src/MH/MailBundle/Resources/config/routing_agenda.yml
@@ -1,13 +1,13 @@
 mh_mail_agenda_add:
     path:     /post/add/{id}/agenda
     defaults:
-        _controller: MHMailBundle:Agenda:addAgenda
+        _controller: MHMailBundle:Post\Agenda:addAgenda
     requirements:
             id:   \d+
 
 mh_mail_agenda_edit:
     path:     /post/edit/{id}/agenda
     defaults:
-        _controller: MHMailBundle:Agenda:editAgenda
+        _controller: MHMailBundle:Post\Agenda:editAgenda
     requirements:
             id:   \d+
