New Bloc Texte Image Working

--- a/src/MH/MailBundle/Resources/config/routing.yml
+++ b/src/MH/MailBundle/Resources/config/routing.yml
@@ -103,6 +103,9 @@ mh_mail_routing_texte_separation:
 mh_mail_routing_bloc:
     resource: routing_bloc.yml
 
+mh_mail_routing_bloc_photo_texte:
+    resource: routing_bloc_photo_texte.yml
+
 mh_mail_routing_tool:
     resource: routing_tool.yml
     prefix:   /tool
