--- a/src/MH/MailBundle/Resources/config/routing_footer_admission.yml
+++ b/src/MH/MailBundle/Resources/config/routing_footer_admission.yml
@@ -1,13 +1,13 @@
 mh_mail_footer_admission_add:
     path:     /post/add/{id}/footer_admission
     defaults:
-        _controller: MHMailBundle:Footer:addFooterAdmission
+        _controller: MHMailBundle:Post\Footer:addFooterAdmission
     requirements:
             id:   \d+
 
 mh_mail_footer_admission_edit:
     path:     /post/edit/{id}/footer_admission
     defaults:
-        _controller: MHMailBundle:Footer:editFooterAdmission
+        _controller: MHMailBundle:Post\Footer:editFooterAdmission
     requirements:
             id:   \d+
