--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "snilius/twig-sort-by-field": "^0.1.5",
         "knplabs/knp-markdown-bundle": "~1.3",
-        "coresphere/console-bundle": "~0.4"
+        "coresphere/console-bundle": "~0.4",
+        "javiereguiluz/easyadmin-bundle": "^1.16"
 
     },
     "require-dev": {
