--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,10 @@
+root:
+    path: /
+    defaults:
+        _controller: FrameworkBundle:Redirect:urlRedirect
+        path: /newsletter
+        permanent: true
+
 mh_mail:
     resource: "@MHMailBundle/Resources/config/routing.yml"
     prefix:   /mail
