add red button bloc + markdown handling for red bloc

--- a/src/MH/MailBundle/Resources/config/routing.yml
+++ b/src/MH/MailBundle/Resources/config/routing.yml
@@ -124,6 +124,9 @@ mh_mail_routing_bloc_photo_texte:
 mh_mail_routing_bloc_texte:
     resource: routing_bloc_texte.yml
 
+mh_mail_routing_button_red:
+    resource: routing_button_red.yml
+
 mh_mail_routing_tool:
     resource: routing_tool.yml
     prefix:   /tool
