--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -35,19 +35,6 @@ monolog:
 
 easy_admin:
     entities:
-        - MH\MailBundle\Entity\Mail
-        - MH\MailBundle\Entity\User
-        - MH\MailBundle\Entity\Post
-        - MH\MailBundle\Entity\PostType
-        - MH\MailBundle\Entity\Post\Agenda
-        - MH\MailBundle\Entity\Post\Bloc
-        - MH\MailBundle\Entity\Post\BlocTexteImage
-        - MH\MailBundle\Entity\Post\Footer
-        - MH\MailBundle\Entity\Post\Header
-        - MH\MailBundle\Entity\Post\Texte
-        - MH\MailBundle\Entity\Tool\Couleur
-        - MH\MailBundle\Entity\Tool\Image
-        - MH\MailBundle\Entity\Tool\Lien
-        - MH\MailBundle\Entity\Tool\Paragraphe
-        - MH\MailBundle\Entity\Tool\Police
-        - MH\MailBundle\Entity\Tool\Texte
+        - MH\NewsletterBundle\Entity\Newsletter
+        - MH\NewsletterBundle\Entity\Rubrique
+        - MH\NewsletterBundle\Entity\Post
