Ajout de JSRoutingBundle pour générer en javascript les routes de addpost Update readme

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -12,3 +12,6 @@ mh_mail:
 mh_newsletter:
     resource: "@MHNewsletterBundle/Resources/config/routing.yml"
     prefix:   /newsletter
+
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
