--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "require": {
         "php": ">=5.5.9",
-        "symfony/symfony": "3.2.*",
+        "symfony/symfony": "3.3.*",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
@@ -31,7 +31,8 @@
         "snilius/twig-sort-by-field": "^0.1.5",
         "knplabs/knp-markdown-bundle": "^1.5",
         "coresphere/console-bundle": "~0.4",
-        "javiereguiluz/easyadmin-bundle": "^1.16"
+        "javiereguiluz/easyadmin-bundle": "^1.16",
+        "friendsofsymfony/jsrouting-bundle": "^1.6"
 
     },
     "require-dev": {
