--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,7 +2,7 @@ root:
     path: /
     defaults:
         _controller: FrameworkBundle:Redirect:urlRedirect
-        path: /newsletter
+        path: /newsletter/home
         permanent: true
 
 mh_mail:
