--- a/src/MH/NewsletterBundle/Resources/config/routing.yml
+++ b/src/MH/NewsletterBundle/Resources/config/routing.yml
@@ -1,5 +1,5 @@
 mh_newsletter_home:
-    path:     /home
+    path:     /
     defaults: { _controller: MHNewsletterBundle:Newsletter:index }
 
 mh_newsletter_create:
