Update readme Add Login basis

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -11,3 +11,7 @@ mh_newsletter:
 
 fos_js_routing:
     resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
+
+fos_user_security:
+    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+
