--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "knplabs/knp-markdown-bundle": "^1.5",
         "coresphere/console-bundle": "~0.4",
         "javiereguiluz/easyadmin-bundle": "^1.16",
-        "friendsofsymfony/jsrouting-bundle": "^1.6"
+        "friendsofsymfony/jsrouting-bundle": "^1.6",
+        "friendsofsymfony/user-bundle": "^2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
