--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -14,4 +14,5 @@ fos_js_routing:
 
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+    prefix:   /newsletter
 
