--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -27,4 +27,6 @@ security:
                   path:       fos_user_security_logout
                   target:     fos_user_security_login
     access_control:
-         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+         - { path: ^/newsletter/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+         - { path: ^/newsletter/edit, role: ROLE_USER }
+         - { path: ^/newsletter/delete, role: ROLE_ADMIN }
