--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "coresphere/console-bundle": "~0.4",
         "javiereguiluz/easyadmin-bundle": "^1.16",
         "friendsofsymfony/jsrouting-bundle": "^1.6",
-        "friendsofsymfony/user-bundle": "^2.0"
+        "friendsofsymfony/user-bundle": "^2.0",
+        "symfony/polyfill-php55": "^1.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
