--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "javiereguiluz/easyadmin-bundle": "^1.16",
         "friendsofsymfony/jsrouting-bundle": "^1.6",
         "friendsofsymfony/user-bundle": "^2.0",
-        "symfony/polyfill-php55": "^1.6"
+        "symfony/assetic-bundle": "^2.8"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
