--- a/src/MH/NewsletterBundle/Resources/config/routing.yml
+++ b/src/MH/NewsletterBundle/Resources/config/routing.yml
@@ -46,10 +46,10 @@ mh_newsletter_edit_header:
     requirements:
             id:   \d+
 
-mh_newsletter_get:
-    path:     /editget/
-    defaults:
-        _controller: MHNewsletterBundle:Newsletter:get
+#mh_newsletter_get:
+#    path:     /editget/
+#    defaults:
+#        _controller: MHNewsletterBundle:Newsletter:get
 
 mh_newsletter_delete:
     path:     /delete/{id}
@@ -77,6 +77,8 @@ mh_newsletter_rubrique_edit:
         _controller: MHNewsletterBundle:Rubrique:edit
     requirements:
             id:   \d+
+    options:
+            expose: true
 
 mh_newsletter_rubrique_delete:
     path:     /delete/rubrique/{id}
@@ -84,11 +86,15 @@ mh_newsletter_rubrique_delete:
         _controller: MHNewsletterBundle:Rubrique:delete
     requirements:
             id:   \d+
+    options:
+            expose: true
 
 mh_newsletter_rubrique_order:
     path:     /order/rubrique/
     defaults:
         _controller: MHNewsletterBundle:Rubrique:order
+    options:
+            expose: true
 
 mh_newsletter_post_add:
     path:     /add/post/{id}
@@ -96,11 +102,16 @@ mh_newsletter_post_add:
         _controller: MHNewsletterBundle:Post:add
     requirements:
             id:   \d+
+    options:
+            expose: true
 
 mh_newsletter_post_order:
     path:     /order/post
     defaults:
         _controller: MHNewsletterBundle:Post:order
+    options:
+            expose: true
+
 
 mh_newsletter_post_edit:
     path:     /edit/post/{id}
