--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "simplemde": "^1.11.2"
+    "simplemde": "^1.11.2",
+    "popper.js": "^1.12.6"
   }
 }
