--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,12 @@
         "javiereguiluz/easyadmin-bundle": "^1.16",
         "friendsofsymfony/jsrouting-bundle": "^1.6",
         "friendsofsymfony/user-bundle": "^2.0",
-        "symfony/assetic-bundle": "^2.8"
+        "symfony/assetic-bundle": "^2.8",
+        "twbs/bootstrap": "4.0.0-beta.2",
+        "components/font-awesome": "^4.7",
+        "components/jqueryui": "^1.12",
+        "components/jquery": "^3.2",
+        "patchwork/jsqueeze": "^2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
