--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -66,7 +66,7 @@ swiftmailer:
     transport: '%mailer_transport%'
     host: '%mailer_host%'
     username: '%mailer_user%'
-    password: '%mailer_password%'
+    password: "%mailer_password%"
     spool: { type: memory }
 
 fos_user:
