Ajout de la Connexion sécurisée, Ajout du changement de mot de passe Ajout de mot de passe oublié Inscription Impossible Ajout des ressources Css et Js compilés

--- a/src/MH/NewsletterBundle/Resources/config/routing.yml
+++ b/src/MH/NewsletterBundle/Resources/config/routing.yml
@@ -66,7 +66,7 @@ mh_newsletter_copy:
             id:   \d+
 
 mh_newsletter_rubrique_add:
-    path:     /rubrique/add/{id}
+    path:     /add/rubrique/{id}
     defaults:
         _controller: MHNewsletterBundle:Rubrique:add
     requirements:
