--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -76,6 +76,9 @@ fos_user:
     from_email:
         address: "%mailer_user%"
         sender_name: "%mailer_user%"
+    resetting:
+        retry_ttl: 300
+        token_ttl: 7200
 
 assetic:
     debug:          '%kernel.debug%'
@@ -89,36 +92,36 @@ assetic:
     assets:
         bootstrap_jquery_js:
             inputs:
-                - %kernel.root_dir%/../vendor/components/jquery/jquery.js
-                - %kernel.root_dir%/../vendor/components/jqueryui/jquery-ui.min.js
-                - %kernel.root_dir%/../web/bundles/mhnewsletter/bower_components/popper.js/dist/umd/popper.min.js
-                - %kernel.root_dir%/../vendor/twbs/bootstrap/dist/js/bootstrap.min.js
+                - '%kernel.root_dir%/../vendor/components/jquery/jquery.js'
+                - '%kernel.root_dir%/../vendor/components/jqueryui/jquery-ui.min.js'
+                - '%kernel.root_dir%/../web/bundles/mhnewsletter/bower_components/popper.js/dist/umd/popper.min.js'
+                - '%kernel.root_dir%/../vendor/twbs/bootstrap/dist/js/bootstrap.min.js'
         main_js:
             inputs:
-                - %kernel.root_dir%/../web/bundles/mhnewsletter/js/main.js
+                - '%kernel.root_dir%/../web/bundles/mhnewsletter/js/main.js'
         simplemde_js:
             inputs:
-                - %kernel.root_dir%/../web/bundles/mhnewsletter/bower_components/simplemde/dist/simplemde.min.js
+                - '%kernel.root_dir%/../web/bundles/mhnewsletter/bower_components/simplemde/dist/simplemde.min.js'
         jsrouter_js:
             inputs:
-                - %kernel.root_dir%/../web/bundles/fosjsrouting/js/router.js
-                - %kernel.root_dir%/../web/js/fos_js_routes.js
+                - '%kernel.root_dir%/../web/bundles/fosjsrouting/js/router.js'
+                - '%kernel.root_dir%/../web/js/fos_js_routes.js'
         bootstrap_css:
             inputs:
-                - %kernel.root_dir%/../vendor/twbs/bootstrap/dist/css/bootstrap.min.css
+                - '%kernel.root_dir%/../vendor/twbs/bootstrap/dist/css/bootstrap.min.css'
         simplemde_css:
             inputs:
-                - %kernel.root_dir%/../web/bundles/mhnewsletter/bower_components/simplemde/dist/simplemde.min.css
+                - '%kernel.root_dir%/../web/bundles/mhnewsletter/bower_components/simplemde/dist/simplemde.min.css'
         main_css:
             inputs:
-                - %kernel.root_dir%/../web/bundles/mhnewsletter/css/main.css
+                - '%kernel.root_dir%/../web/bundles/mhnewsletter/css/main.css'
         jquery_ui_css:
             inputs:
-                - %kernel.root_dir%/../vendor/components/jqueryui/themes/smoothness/jquery-ui.min.css
+                - '%kernel.root_dir%/../vendor/components/jqueryui/themes/smoothness/jquery-ui.min.css'
         font_awesome_css:
             inputs:
-                - %kernel.root_dir%/../vendor/components/font-awesome/css/font-awesome.min.css
-                - %kernel.root_dir%/../vendor/components/font-awesome/fonts/fontawesome-webfont.ttf
-                - %kernel.root_dir%/../vendor/components/font-awesome/fonts/fontawesome-webfont.woff
-                - %kernel.root_dir%/../vendor/components/font-awesome/fonts/fontawesome-webfont.woff2
+                - '%kernel.root_dir%/../vendor/components/font-awesome/css/font-awesome.min.css'
+                - '%kernel.root_dir%/../vendor/components/font-awesome/fonts/fontawesome-webfont.ttf'
+                - '%kernel.root_dir%/../vendor/components/font-awesome/fonts/fontawesome-webfont.woff'
+                - '%kernel.root_dir%/../vendor/components/font-awesome/fonts/fontawesome-webfont.woff2'
 
