--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -14,5 +14,15 @@ fos_js_routing:
 
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
-    prefix:   /newsletter 
+    prefix:   /newsletter
 
+fos_user_resetting:
+    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+    prefix: /newsletter/resetting
+
+fos_user_change_password:
+    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+    prefix: /newsletter/profile
+
+fos_user_profile_show:
+    path: /newsletter
