--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,14 +4,12 @@ security:
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     providers:
          main:
               id: fos_user.user_provider.username
 
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt|admin)|css|images|js)/
             security: false
@@ -27,4 +25,17 @@ security:
                   path:       fos_user_security_logout
                   target:     fos_user_security_login
     access_control:
+         - { path: ^/newsletter/edit, role: ROLE_ADMIN }
+         - { path: ^/newsletter/order, role: ROLE_ADMIN }
+         - { path: ^/newsletter/view, role: ROLE_ADMIN }
+         - { path: ^/newsletter/delete, role: ROLE_ADMIN }
+         - { path: ^/newsletter/copy, role: ROLE_ADMIN }
+         - { path: ^/newsletter/mail, role: ROLE_ADMIN }
+         - { path: ^/newsletter/add, role: ROLE_ADMIN }
+         - { path: ^/newsletter/download, role: ROLE_ADMIN }
+         - { path: ^/newsletter/creation, role: ROLE_ADMIN }
+         - { path: /newsletter/, role: IS_AUTHENTICATED_ANONYMOUSLY }
          - { path: ^/newsletter/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+         - { path: ^/newsletter/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+         - { path: ^/newsletter/profile, role: IS_AUTHENTICATED_ANONYMOUSLY }
+
